@@ -416,7 +416,7 @@
                 <pkgname>breeze</pkgname>
                 <pkgname>breeze-gtk</pkgname>
                 <pkgname>cdrdao</pkgname>
-                <pkgname>clementine</pkgname>
+                <!--<pkgname>clementine</pkgname>-->
                 <pkgname>dolphin</pkgname>
                 <pkgname>dolphin-plugins</pkgname>
                 <pkgname>dvd+rw-tools</pkgname>
@@ -463,7 +463,6 @@
                 <pkgname>plasma-workspace-wallpapers</pkgname>
                 <pkgname>powerdevil</pkgname>
                 <pkgname>qtcurve-gtk2</pkgname>
-                <pkgname>qtcurve-qt5</pkgname>
                 <pkgname>qtcurve-kde</pkgname>
                 <pkgname>qtcurve-utils</pkgname>
                 <pkgname>spectacle</pkgname>
